src/main/java/org/example/errors/NoCompaniesException.java
package org.example.errors;

public class NoCompaniesException extends Exception {
    public NoCompaniesException(){
        super("No companies left");
    }
}
